cluster/apps/mhav-dev/templates/basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mhav-dev-basic-auth
  namespace: mhav-dev
spec:
  basicAuth:
    secret: mhav-dev-basic-auth
