cluster/apps/mhav-dev/templates/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: mhav-dev
spec:
  basicAuth:
    secret: basic-auth-secret
