cluster/apps/mhav-dev/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mhav-dev
spec:
  selector:
    app: mhav-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
